@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-7">
-    <div id="selected" class="text-left">Ausgewählt: {{adminUnitSelected.fullname}}</div>  
+      <div id="selected" class="text-left" ng-show="adminUnitSelected.fullname">Ausgewählt: {{adminUnitSelected.fullname}}</div>  
     <openlayers  ol-center="center" width="100%" height="400px" custom-layers="true">
        <ol-layer ol-layer-properties="mapbox"></ol-layer>
        <ol-layer ol-layer-properties="boundingbox"></ol-layer>
